--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,4 @@ jobs:
 
           # files will copy to under remote_path
 
-          remote_path: /var/www/html
+          remote_path: /var/www/
